--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                 <ul class="pakage__list">
                   <li>Web Design</li>
                   <li>Photography</li>
-                  <li>1GB Storage</li>
-                  <li>Mail Support</li>
+                  <li>50GB Storage</li>
+                  <li>Endless Support</li>
                 </ul>
                 <div class="pakage__price">
-                  <h2>$ 10</h2>
+                  <h2>$ 25</h2>
                   <p>per month</p>
                 </div>
                 <div class="pakage__btn">
@@ -250,11 +250,11 @@
                 <ul class="pakage__list">
                   <li>Web Design</li>
                   <li>Photography</li>
-                  <li>1GB Storage</li>
-                  <li>Mail Support</li>
+                  <li>Unlimited Storage</li>
+                  <li>Endless Support</li>
                 </ul>
                 <div class="pakage__price">
-                  <h2>$ 10</h2>
+                  <h2>$ 25</h2>
                   <p>per month</p>
                 </div>
                 <div class="pakage__btn">
